index.css
.main{
    background: lightgray;
    text-align: center;
    margin: 50px;
    padding: 20px;
    font-family: Calibri, arial;
}

h1{
    margin-bottom: 0px;
}

p{
    text-align: justify;
}

.header{
    margin: 50px;
}

.sun1{background:red;}
.sun2{background:blue;}
.sun3{background:green;}

.splash-grid{
    display: grid;
    font-size: 40px;
    min-height: 200px;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-gap: 20px;
    justify-content: center;
    align-content: center;
}

a{color:black;}

a:hover{color:pink}

a:visited{color:#700070}

